k8s/collect-metrics/http-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: develop
  name: http-server
  labels:
    app: http-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: http-server
        image: ks6088ts/workshop-kubernetes:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "10m"
          limits:
            memory: "256Mi"
            cpu: "10m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  namespace: develop
  name: http-server
spec:
  type: NodePort
  selector:
    app: http-server
  ports:
    - port: 8080
      targetPort: 8080
