k8s/collect-metrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
  namespace: develop
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /http-server
            backend:
              service:
                name: http-server
                port:
                  number: 8080
